--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contador de Caracteres</title>
+  <meta name="title" content="Contador de Caracteres">
+  <meta name="description" content="mini projeto criado para praticar eventos no JavaScript.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mateusmaranhao.github.io/contador-caracteres/">
+  <meta property="og:title" content="Contador de Caracteres">
+  <meta property="og:description" content="mini projeto criado para praticar eventos no JavaScript.">
+  <meta property="og:image" content="./img/og-image.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://mateusmaranhao.github.io/contador-caracteres/">
+  <meta property="twitter:title" content="Contador de Caracteres">
+  <meta property="twitter:description" content="mini projeto criado para praticar eventos no JavaScript.">
+  <meta property="twitter:image" content="./img/og-image.png">
+
+
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
