adicionar og:image através de link

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <meta property="og:url" content="https://mateusmaranhao.github.io/contador-caracteres/">
   <meta property="og:title" content="Contador de Caracteres">
   <meta property="og:description" content="mini projeto criado para praticar eventos no JavaScript.">
-  <meta property="og:image" content="./img/og-image.png">
+  <meta property="og:image" content="https://i.ibb.co/Xt5zxf4/og-image.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://mateusmaranhao.github.io/contador-caracteres/">
   <meta property="twitter:title" content="Contador de Caracteres">
   <meta property="twitter:description" content="mini projeto criado para praticar eventos no JavaScript.">
-  <meta property="twitter:image" content="./img/og-image.png">
+  <meta property="twitter:image" content="https://i.ibb.co/Xt5zxf4/og-image.png">
 
 
   <link rel="stylesheet" href="./css/style.css">
